Fixed invisibility on z-indexed elements
By giving the warning the highest possible z-index, it will be shown on
top of every other z-indexed element.

--- a/mCookieWarning.css
+++ b/mCookieWarning.css
@@ -14,6 +14,7 @@ html, body {
 
     position: fixed;
     top: 0;
+    z-index: 2147483647;
 
     -webkit-box-shadow: 0 1px 16px 0 rgba(50, 50, 50, 0.75);
     -moz-box-shadow: 0 1px 16px 0 rgba(50, 50, 50, 0.75);
